--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,12 @@
     // padding-bottom: 2.5rem; /* Footer height */
   }
 
+  @media (max-width: 1200px) {
+    .content-wrap {
+    padding-top: 60px;
+     } /* Navbar height */
+  }
+    
 
   .section-hr {
     width: 150px;
