another day of grinding react

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Copse&family=Paytone+One&display=swap');
+
+
+
 .App.page-container {
     position: relative;
     min-height: 100vh;
@@ -20,4 +24,8 @@
     width: 150px;
     margin: auto;
     border-top: 3px solid;
+  }
+
+  h2 {
+    font-family: 'Copse', serif;
   }
