--- a/src/common/Showcase/Showcase.scss
+++ b/src/common/Showcase/Showcase.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@800&family=Montserrat:ital,wght@0,100;1,500&family=Raleway:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 
 
 .showcase {
@@ -7,7 +7,7 @@
     .showcase-header {
       z-index: 2;
       h1 {
-        font-family: 'Raleway', sans-serif;
+        font-family: 'Paytone One', sans-serif;
       }
     }
     .showcase-overlay {
