--- a/src/pages/About/Faculty/FacultyAccordion/index.scss
+++ b/src/pages/About/Faculty/FacultyAccordion/index.scss
@@ -1,4 +1,4 @@
-.accordion-button {
-    background-color: grey;
-    color: white;
-}
+// .accordion-button {
+//     background-color: #f5f5f5;
+//     color: white;
+// }
