--- a/src/common/NavBar/NavBar.scss
+++ b/src/common/NavBar/NavBar.scss
@@ -1,3 +1,4 @@
+// AFTER SCROLLING DOWN THE PAGE
 .sticky {
   opacity: 0.9;
   transition: all 0.3s ease-out 0s !important;
@@ -11,17 +12,21 @@
   }
 
   .nav-link.active {
-    color: #0984e3 !important;
+    color: #74b9ff !important;
   }
 }
 
-
+// BEFORE SCROLLING
 .navbar {
     transition: all 0.3s ease-out 0s !important;
     font-size: 1.2rem !important;
     background-color: rgb(29, 29, 29);
     padding-top: 0.8rem;
     padding-bottom: 0.8rem;
+
+    .nav-link.active {
+      color: #74b9ff !important;
+    }
 }
 
 .navbar-nav .nav-link {
@@ -35,6 +40,7 @@
   .nav-link {
     padding: 0.8rem 1rem !important;
   }
+
 
   @media (max-width: 767px) {
     .nav-link {
@@ -87,23 +93,28 @@
   //   transition: border 0.2s;
   //   border-bottom: 1px solid white;
   // }
-  .dropdown:hover .dropdown-menu {
-    display: block;
-    // margin-top: 0; // remove the gap so it doesn't close
-  }
 
-  .navbar-nav {
-    li {
-      .dropdown-menu {
-        background-color: white;
-        opacity: 0.9;
-      }
-      .dropdown-item {
-        color: black !important;
-      }
-      .dropdown-item:hover {
-        background-color: #212529 !important;
-        color: white !important;
+
+  //prevent the dropdown hover for mobile
+  @media (min-width: 1200px) {
+    .dropdown:hover .dropdown-menu {
+      display: block;
+      // margin-top: 0; // remove the gap so it doesn't close
+    }
+  
+    .navbar-nav {
+      li {
+        .dropdown-menu {
+          background-color: #212529;
+          opacity: 0.9;
+        }
+        .dropdown-item {
+          color: white !important;
+        }
+        .dropdown-item:hover {
+          background-color: white !important;
+          color: black !important;
+        }
       }
     }
   }
