almost ready for test deployment

--- a/src/common/Showcase/Showcase.scss
+++ b/src/common/Showcase/Showcase.scss
@@ -40,3 +40,7 @@
 #family-showcase {
     background: url("/assets/images/family/showcase.jpg") center / cover no-repeat;
 }
+
+#connect-showcase {
+  background: url("/assets/images/connect/showcase.jpg") center / cover no-repeat;
+}
