--- a/src/pages/About/LiveProgram/index.scss
+++ b/src/pages/About/LiveProgram/index.scss
@@ -1,7 +1,8 @@
-.nav-link.active {
+button.nav-link.active {
     color: white !important;
 }
 
-.nav-link {
+button.nav-link {
     font-size: 1.25rem;
+    font-weight: bold;
 }
