wrapping up initial sprint

--- a/src/pages/About/GiftProgram/index.scss
+++ b/src/pages/About/GiftProgram/index.scss
@@ -37,7 +37,7 @@
 
   @media screen and (max-width: 768px) {
     .gift--box {
-      width: 350px;
+      width: auto;
       height: auto;
     }
   }
