--- a/src/pages/About/Faculty/ProfilePage/index.scss
+++ b/src/pages/About/Faculty/ProfilePage/index.scss
@@ -4,10 +4,18 @@
 
 .spinner-border {
     position: relative;
-    top: 50%; left: 48%;
+    top: 50%;
     // transform: translate(-50%,-50%);
     width: 50px;
     height: 50px;
+}
+
+.loading-text {
+    position: relative;
+    top: 52%;
+    // transform: translate(-50%,-50%);
+    font-size: 1.5rem;
+    font-weight: 500;
 }
 
 .img-faculty-carousel {
