--- a/src/common/Showcase/Showcase.scss
+++ b/src/common/Showcase/Showcase.scss
@@ -1,11 +1,13 @@
+// CLEAN THIS UP SOON
 @import url('https://fonts.googleapis.com/css2?family=Copse&family=Didact+Gothic&family=Fredoka+One&family=Paytone+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Paytone+One&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Paytone+One&family=Yanone+Kaffeesatz:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Lilita+One&family=Paytone+One&family=Yanone+Kaffeesatz:wght@700&display=swap');
-
-
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Lilita+One&family=Paytone+One&family=Yanone+Kaffeesatz:wght@700&display=swap');
+
+
+
+
 .showcase {
     min-height: 275px;
     position: relative;
