--- a/src/common/NavBar/NavBar.scss
+++ b/src/common/NavBar/NavBar.scss
@@ -1,63 +1,63 @@
 // AFTER SCROLLING DOWN THE PAGE
-.sticky {
-  opacity: 0.9;
-  transition: all 0.3s ease-out 0s !important;
-  box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
-  backdrop-filter: blur(15px) !important;
+// .sticky {
+//   opacity: 0.9;
+//   transition: all 0.3s ease-out 0s !important;
+//   box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
+//   backdrop-filter: blur(15px) !important;
 
-  .navbar-nav .nav-link {
-    color: white !important;
-    padding-right: 0.75rem !important;
-    padding-left: 0.75rem !important;
-  }
+//   .navbar-nav .nav-link {
+//     color: white !important;
+//     padding-right: 0.75rem !important;
+//     padding-left: 0.75rem !important;
+//   }
 
-  .nav-link.active {
-    color: #74b9ff !important;
-  }
-}
+//   .nav-link.active {
+//     color: #74b9ff !important;
+//   }
+// }
 
 // BEFORE SCROLLING
-.navbar {
-    transition: all 0.3s ease-out 0s !important;
-    font-size: 1.2rem !important;
-    background-color: rgb(29, 29, 29);
-    padding-top: 0.8rem;
-    padding-bottom: 0.8rem;
+// .navbar {
+//     transition: all 0.3s ease-out 0s !important;
+//     font-size: 1.2rem !important;
+//     background-color: rgb(29, 29, 29);
+//     padding-top: 0.8rem;
+//     padding-bottom: 0.8rem;
 
-    .nav-link.active {
-      color: #74b9ff !important;
-    }
-}
+//     .nav-link.active {
+//       color: #74b9ff !important;
+//     }
+// }
 
-.navbar-nav .nav-link {
-    color: white !important;
-    padding-right: 0.75rem !important;
-    padding-left: 0.75rem !important;
-  }
-
-
-
-  .nav-link {
-    padding: 0.8rem 1rem !important;
-  }
+// .navbar-nav .nav-link {
+//     color: white !important;
+//     padding-right: 0.75rem !important;
+//     padding-left: 0.75rem !important;
+//   }
 
 
-  @media (max-width: 767px) {
-    .nav-link {
-      padding: 0.7rem 1rem !important;
-    }
-  }
 
-  .logo {
-    height: 1.5em !important;
-    width: 2.6em !important;
-  }
+//   .nav-link {
+//     padding: 0.8rem 1rem !important;
+//   }
 
 
-.navbar-nav .nav-item {
-    position: relative;
-    margin-left: 5px;
-  }
+//   @media (max-width: 767px) {
+//     .nav-link {
+//       padding: 0.7rem 1rem !important;
+//     }
+//   }
+
+//   .logo {
+//     height: 1.5em !important;
+//     width: 2.6em !important;
+//   }
+
+
+// .navbar-nav .nav-item {
+//     position: relative;
+//     margin-left: 5px;
+//   }
   
   // .navbar-nav .nav-item a {
   //   font-weight: 500;
@@ -92,25 +92,25 @@
 
 
   //prevent the dropdown hover for mobile
-  @media (min-width: 1200px) {
-    .dropdown:hover .dropdown-menu {
-      display: block;
-      // margin-top: 0; // remove the gap so it doesn't close
-    }
+  // @media (min-width: 1200px) {
+  //   .dropdown:hover .dropdown-menu {
+  //     display: block;
+  //     // margin-top: 0; // remove the gap so it doesn't close
+  //   }
   
-    .navbar-nav {
-      li {
-        .dropdown-menu {
-          background-color: #212529;
-          opacity: 1.0;
-        }
-        .dropdown-item {
-          color: white !important;
-        }
-        .dropdown-item:hover {
-          background-color: white !important;
-          color: black !important;
-        }
-      }
-    }
-  }
+  //   .navbar-nav {
+  //     li {
+  //       .dropdown-menu {
+  //         background-color: #212529;
+  //         opacity: 1.0;
+  //       }
+  //       .dropdown-item {
+  //         color: white !important;
+  //       }
+  //       .dropdown-item:hover {
+  //         background-color: white !important;
+  //         color: black !important;
+  //       }
+  //     }
+  //   }
+  // }
