--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Copse&family=Didact+Gothic&family=Paytone+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto+Mono:wght@700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Copse&family=Didact+Gothic&family=Fredoka+One&family=Paytone+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Paytone+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Paytone+One&family=Yanone+Kaffeesatz:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Lilita+One&family=Paytone+One&family=Yanone+Kaffeesatz:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Lilita+One&family=Paytone+One&family=Yanone+Kaffeesatz:wght@700&display=swap');
+
+
+@import url('https://fonts.cdnfonts.com/css/cubano');
 
 body {
   margin: 0;
