--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Copse&family=Didact+Gothic&family=Paytone+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto+Mono:wght@700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Copse&family=Didact+Gothic&family=Fredoka+One&family=Paytone+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Paytone+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Paytone+One&family=Yanone+Kaffeesatz:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Lilita+One&family=Paytone+One&family=Yanone+Kaffeesatz:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Arvo:wght@700&family=Didact+Gothic&family=Fredoka+One&family=Lilita+One&family=Paytone+One&family=Yanone+Kaffeesatz:wght@700&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Copse&family=Didact+Gothic&family=Montserrat:wght@200;300;400;500;600;700;800;900&family=Roboto+Mono:wght@400;500;600;700&family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,500&display=swap');
 @import url('https://fonts.cdnfonts.com/css/cubano');
 
 body {
