improve style consistency

--- a/src/pages/Campus/Outreach/index.scss
+++ b/src/pages/Campus/Outreach/index.scss
@@ -1,7 +1,7 @@
 
-    .center-crop {
-        object-fit: cover; /* Do not scale the image */
-        object-position: center; /* Center the image within the element */
-        height: 300px;
-        width: 300px;
-      }
+    // .center-crop {
+    //     object-fit: cover; /* Do not scale the image */
+    //     object-position: center; /* Center the image within the element */
+    //     height: 300px;
+    //     width: 300px;
+    //   }
