refactor supply list

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -7,3 +7,8 @@
 table {
   font-family: "didact gothic", sans-serif;
 }
+
+li {
+  font-family: "didact gothic", sans-serif;
+  font-size: 1.2rem;
+}
