create tw table components and impliment for tuition section

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,10 @@ body {
   color: #212529; /* default font color */
 }
 
+* {
+  box-sizing: border-box;
+}
+
 table {
   font-family: "didact gothic", sans-serif;
 }
